--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 MONGODB_URI = "mongodb+srv://afiyataibani:12345@cluster0.o7fk8ah.mongodb.net"
-CLERK_WEBHOOK_SECRET = ""
+CLERK_WEBHOOK_SECRET = "whsec_A/E7UFEzJ6P3YZfbsR1OE7o7TyuW4GuQ"
