--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,9 @@
-MONGODB_URI = "mongodb+srv://afiyataibani:12345@cluster0.o7fk8ah.mongodb.net"
+JWT_SECRET="afiya#secret"
+
+MONGODB_URI = "mongodb+srv://afiyataibani:12345@cluster0.o7fk8ah.mongodb.net/"
 CLERK_WEBHOOK_SECRET = "whsec_A/E7UFEzJ6P3YZfbsR1OE7o7TyuW4GuQ"
+
+# Cloudinary Setup
+CLOUDINARY_NAME = "dqhqpsehz"
+CLOUDINARY_API_KEY ="142124157632361"
+CLOUDINARY_SECRET_KEY = "7T18ILG5rc8guAhVnswD-Jt3WMs"
