--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
-    "svix": "^1.42.0"
+    "streamifier": "^0.1.1",
+    "svix": "^1.69.0"
   }
 }
