--- a/server/.env
+++ b/server/.env
@@ -1,9 +1,14 @@
 JWT_SECRET="afiya#secret"
 
-MONGODB_URI = "mongodb+srv://afiyataibani:12345@cluster0.o7fk8ah.mongodb.net/"
-CLERK_WEBHOOK_SECRET = "whsec_A/E7UFEzJ6P3YZfbsR1OE7o7TyuW4GuQ"
+# MongoDb Setup
+MONGODB_URI = "mongodb+srv://afiyataibani:12345@cluster0.o7fk8ah.mongodb.net/JobPortal"
 
 # Cloudinary Setup
-CLOUDINARY_NAME = "dqhqpsehz"
-CLOUDINARY_API_KEY ="142124157632361"
-CLOUDINARY_SECRET_KEY = "7T18ILG5rc8guAhVnswD-Jt3WMs"
+CLOUDINARY_NAME = dqhqpsehz
+CLOUDINARY_API_KEY =142124157632361
+CLOUDINARY_SECRET_KEY = 7T18ILG5rc8guAhVnswD-Jt3WMs
+
+# Clerk Setup
+CLERK_WEBHOOK_SECRET = "whsec_A/E7UFEzJ6P3YZfbsR1OE7o7TyuW4GuQ"
+CLERK_PUBLISHABLE_KEY=pk_test_bW9kZXN0LWtpbmdmaXNoLTU3LmNsZXJrLmFjY291bnRzLmRldiQ
+CLERK_SECRET_KEY=sk_test_PusdxXL7eDh8sgxoGvWyp5MtboUSKXEouN2RJsRjrh
