--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@clerk/express": "^1.7.5",
     "@sentry/node": "^9.35.0",
     "@sentry/profiling-node": "^9.35.0",
     "bcrypt": "^6.0.0",
